# vst-plugins

./: .gitignore  CLAUDE.md  Cargo.toml  Info.auv2.plist  Justfile  LICENSE  README.md  dprint.jsonc
.claude/: settings.json  settings.local.json
.claude/skills/au-validation/: SKILL.md
.claude/skills/dev-cycle/: SKILL.md
src/: lib.rs  params.rs
src/dsp/: delay_line.rs  filter.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
